--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,8 @@
 Title: Weighted Likelihood Estimation
 Package: wle
-Version: 0.2
+Version: 0.4
 Author: Claudio Agostinelli <claudio@stat.unipd.it>.
+Mantainer: Claudio Agostinelli <claudio@stat.unipd.it>.
+Date: March 2, 2001. 
 Description: Approach to the robustness via Weigheted Likelihood. 
-License: GNU GPL version 2
+License: GNU GPL version 2 
