--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Title: Weighted Likelihood Estimation
 Package: wle
-Version: 0.7
+Version: 0.7-2
 Author: Claudio Agostinelli <claudio@unive.it>
 Maintainer: Claudio Agostinelli <claudio@unive.it>
-Date: January 2, 2002. 
+Date: April 02, 2002. 
 Description: Approach to the robustness via Weigheted Likelihood. 
 License: GNU GPL version 2
