--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,9 @@
 Title: Weighted Likelihood Estimation
 Package: wle
-Version: 0.7-7
+Version: 0.7-8
 Author: Claudio Agostinelli <claudio@unive.it>
 Maintainer: Claudio Agostinelli <claudio@unive.it>
-Date: November 18, 2003. 
+Date: December 23, 2003. 
 Description: Approach to the robustness via Weigheted Likelihood. 
 License: GNU GPL version 2
+Packaged: Tue Dec 23 15:39:09 2003; claudio
