--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Title: Weighted Likelihood Estimation
 Package: wle
-Version: 0.8
+Version: 0.8-1
 Author: Claudio Agostinelli <claudio@unive.it>
 Maintainer: Claudio Agostinelli <claudio@unive.it>
-Date: October 5, 2004. 
+Date: April 10, 2005. 
 Description: Approach to the robustness via Weigheted Likelihood. 
 License: GNU GPL version 2
-Packaged: Tue Oct  5 11:43:08 2004; claudio
+Packaged: Thu Apr  7 16:29:05 2005; claudio
