--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,11 @@
 Title: Weighted Likelihood Estimation
+LazyLoad: yes
+LazyData: yes
 Package: wle
-Version: 0.9
+Version: 0.9-1
 Author: Claudio Agostinelli <claudio@unive.it>
 Maintainer: Claudio Agostinelli <claudio@unive.it>
-Date: April 16, 2005. 
-Description: Approach to the robustness via Weigheted Likelihood. 
+Date: December 6, 2005. 
+Description: Approach to the robustness via Weighted Likelihood. 
 License: GNU GPL version 2
-Packaged: Sat Apr 16 10:32:02 2005; claudio
+Packaged: Fri Dec  9 14:46:13 2005; claudio
