--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,11 @@ Title: Weighted Likelihood Estimation
 LazyLoad: yes
 LazyData: yes
 Package: wle
-Version: 0.9-2
+Version: 0.9-3
 Author: Claudio Agostinelli <claudio@unive.it>
 Maintainer: Claudio Agostinelli <claudio@unive.it>
-Date: Febraury 13, 2006. 
+Depends: circular
+Date: June 11, 2006. 
 Description: Approach to the robustness via Weighted Likelihood. 
 License: GNU GPL version 2
-Packaged: Mon Feb 13 09:59:29 2006; claudio
+Packaged: Thu Aug 24 10:50:47 2006; claudio
