--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,11 +2,13 @@ Title: Weighted Likelihood Estimation
 LazyLoad: yes
 LazyData: yes
 Package: wle
-Version: 0.9-3
+Version: 0.9-4
 Author: Claudio Agostinelli <claudio@unive.it>
 Maintainer: Claudio Agostinelli <claudio@unive.it>
 Depends: circular
-Date: June 11, 2006. 
-Description: Approach to the robustness via Weighted Likelihood. 
-License: GNU GPL version 2
-Packaged: Thu Aug 24 10:50:47 2006; claudio
+Date: June, 10, 2010.
+Description: Approach to the robustness via Weighted Likelihood.
+License: GPL-2
+Packaged: 2010-06-05 03:58:32 UTC; claudio
+Repository: CRAN
+Date/Publication: 2010-06-05 05:58:20
