--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,14 +2,14 @@ Title: Weighted Likelihood Estimation
 LazyLoad: yes
 LazyData: yes
 Package: wle
-Version: 0.9-9
-Author: Claudio Agostinelli <claudio@unive.it>,  SLATEC Common Mathematical Library <www.netlib.org/slatec>
-Maintainer: Claudio Agostinelli <claudio@unive.it>
-Depends: R (>= 3.0.0), circular
-Date: December, 10, 2013.
+Version: 0.9-91
+Author: Claudio Agostinelli <claudio.agostinelli@unitn.it>,  SLATEC Common Mathematical Library <www.netlib.org/slatec>
+Maintainer: Claudio Agostinelli <claudio.agostinelli@unitn.it>
+Depends: R (>= 3.0.0), circular,
+Date: 2015-10-17
 Description: Approach to the robustness via Weighted Likelihood. 
 License: GPL-2
-Packaged: 2013-12-11 10:15:53 UTC; claudio
 NeedsCompilation: yes
+Packaged: 2015-10-17 15:29:42 UTC; claudio
 Repository: CRAN
-Date/Publication: 2013-12-11 11:51:27
+Date/Publication: 2015-10-18 18:41:42
